# frappe-base-app-placeholder

./: README.md  pyproject.toml
cloud_base_app/: hooks.py  modules.txt  setup.py
cloud_base_app/box_configuration/doctype/box_settings/: box_settings.js  box_settings.json  box_settings.py  test_box_settings.py
cloud_base_app/box_configuration/doctype/tenant_settings/: tenant_settings.js  tenant_settings.json  tenant_settings.py  test_tenant_settings.py
cloud_base_app/fixtures/: custom_html_block.json  role.json  role_profile.json  service_extension_type.json  user.json  web_page.json
cloud_base_app/public/css/: cloud_base_app.css
cloud_base_app/public/js/: custom_about.js
cloud_base_app/service_packages/: mock_warehouse.py  models.py
cloud_base_app/service_packages/controllers/: packet_list_controller.py
cloud_base_app/service_packages/doctype/packet_manager/: packet_manager.js  packet_manager.json  packet_manager.py  test_packet_manager.py
cloud_base_app/service_packages/doctype/service_extension/: service_extension.js  service_extension.json  service_extension.py  test_service_extension.py
cloud_base_app/service_packages/doctype/service_extension_type/: service_extension_type.js  service_extension_type.json  service_extension_type.py  test_service_extension_type.py
cloud_base_app/service_packages/doctype/service_packet/: service_packet.js  service_packet.json  service_packet.py  test_service_packet.py
cloud_base_app/service_packages/services/: pilot_station_api.py  plugin_api.py
cloud_base_app/service_packages/workspace/setup/: setup.json
(+10 files in other folders)
