[project]
name = "cloud_base_app"
authors = [
    { name = "CloudGCS", email = "contact@cloudgcs.com"}
]
description = "Cloud Base Application Framework - Public Placeholder"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
